@@ -1,2 +1,0 @@
-retry_decorator is a Python module that exposes a decorator that retries the
-decorated function with exponential backoff.
