@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2024,v 1.2227 2024/04/04 13:41:23 wiz Exp $
+$NetBSD: CHANGES-2024,v 1.2228 2024/04/04 13:43:02 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2024:
 
@@ -3750,3 +3750,4 @@ Changes to the packages collection and infrastructure in 2024:
 	Removed www/py-google-apitools [wiz 2024-04-04]
 	Removed security/py-google-reauth [wiz 2024-04-04]
 	Removed time/py-monotonic [wiz 2024-04-04]
+	Removed devel/py-retry_decorator [wiz 2024-04-04]
